# cuNSAF

./: .gitignore  CMakeLists.txt  README.md  build.sh  ncu.sh  test.sh
docs/: reduce.md
include/core/: common.h  utils.h
include/kernels/: add.h  kernels.h  reduce.h
ref/pmpp/docs/: histogram.md  reduce.md
ref/pmpp/histogram/: histogram.cu  test.cu
ref/pmpp/reduce/: reduce  reduce.cu  reduce.py  reducev0.cu  reducev1.cu
src/: main.cpp
src/kernels/add/: CMakeLists.txt  add.cu
src/kernels/reduce/: CMakeLists.txt  reduce_baseline.cu
